--- a/001Basics/test.html
+++ b/001Basics/test.html
@@ -3,9 +3,18 @@
 <head>
     <meta charset="UTF-8">
     <title>SDanD</title>
+  <style>
+    body{
+      background-image: url(images/675185547C10DE73A81B2066A14C3159026B95BC4.jpg);
+      background-size: 100% 100%;
+      height: 100%;
+    }
+    html{
+      height: 100%;
+    }
+  </style>
 </head>
 <body>
-<img src=images/675185547C10DE73A81B2066A14C3159026B95BC4.jpg/>
 <h1>静夜思</h1>
 <p>床前明月光，</p>
 <p>疑是地上霜。</p>
