--- a/001Basics/test.html
+++ b/001Basics/test.html
@@ -12,9 +12,18 @@
     html{
       height: 100%;
     }
+    @keyframes myfirst {
+      from{opacity: 0}
+      to{opacity: 100}
+    }
+    h1,p{
+      animation: myfirst 2s infinite;
+    }
   </style>
 </head>
 <body>
+<audio src="wav/bgm.wav" autoplay="autoplay" controls="controls">
+</audio>
 <h1>静夜思</h1>
 <p>床前明月光，</p>
 <p>疑是地上霜。</p>
